# egg-tactic-code

./: .gitignore  Cargo.toml  EggTactic.lean  Main.lean  PrettyPrinter.lean  README.md  example.lean  lake-manifest.json  lakefile.lean  lean-toolchain
EggTactic/: Egraph.lean  Eqsat.lean  Evaluation.lean  Sexp.lean  Test.lean  Tracing.lean
Evaluation/: Calc.lean  FunctionalProgramming.lean  GeneralizedRewriting.lean  GroupsKnuthBendix.lean  GroupsKnuthBendix.v  GroupsKnuthBendixAesop.lean  GroupsKnuthBendixAuto.v  GroupsKnuthBendixExploded.v  GroupsKnuthBendixSimp.lean  ICJAR.lean  Scaling.lean
Evaluation/Reviewer1/: counts.sh  gen_count.py
Evaluation/scaling-proof-length/: plotscaling.R  scaling-exponential.tex  scaling-geometric.csv  stats.csv
Evaluation/scaling-space-and-proof/: Scaling.v  (+4 more)
ForeignLean/: Main.lean
json-egg/: .gitignore  Cargo.toml  compare-json-reqs.py  egg.json  foo.json  group-inv-egg-not-cleaned-up.json  group-inv-mul-cancel-left.json  group-inv-simplified.json  group-test.json  solution.md  test-position-vars.json  test-position.json  test.json  transitive-rev-test.json
json-egg/json-inputs/: group-inv-egg-cleaned-up.json  group-inv-egg-not-cleaned-up.json  group-inv-inv-broken-rewrites.json  group-inv-inv-working-rewrites.json  group-inv-mul-cancel-left.json  group-inv-mul-slow-reduced.json  group-inv-mul-slow.json  group-inv-mul-working.json  group-inv-simplified.json  group-test-ap.json  group-test.json  instantiation-test.json  non-equal-test.json  slow.json  transitive-test.json
json-egg/src/: main.rs  scheduler.rs
src/: main.rs
(+16 files in other folders)
