[package]
name = "egg-herbie"
version = "0.2.2"
authors = [ "Oliver Flatt <oflatt@gmail.com>", "Max Willsey <me@mwillsey.com>" ]
edition = "2018"


[dependencies]
egg = { version = "0.8", features=["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
indexmap = "1"
libc = "0.2.71"
smallvec = "1.4.0"

num-rational = "0.3.0"
num-integer = "0.1.42"
num-bigint = "0.3.0"
num-traits = "0.2.12"
env_logger = { version = "0.7", default-features = false }

[profile.test]
debug = true
opt-level = 1

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
